Stop wrapping table images

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -87,7 +87,7 @@ div#top.show {
 }
 
 .small-print {
-    margin: 50px 0;
+    margin: 30px 0;
     display: block;
 }
 
